# SDATTool

./: .gitignore  README.md  SDATTool.py  meson.build
SDATTool/: Midi.py  Sbnk.py  Sdat.py  Sseq.py  Swar.py  __main__.py  const.py  group.py  info.py  meson.build  nds.py  player.py  sbnk.py  sdat.py  sdatplay.py  sseq.py  strm.py  swar.py  util.py
